| Author: Jonathan Naumann                                               |
+------------------------------------------------------------------------+
|
| CHANGELOG
|
+



############################################################################################





Version 1.6
	- Version 1.6.0

Developer Version
	- 1.6.0 Development / Stable
	- 1.6.1 Stable
	- 1.6.2 Stable

Building Steps: 3800



 Version 1.6.2 Stable
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: 

 - changed: 

 - added: 



 
 Version 1.6.1 Stable
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: Fixed a bug which replace the http:// of a image link in content data if seo is
              enabled and the cms is installed in root level.
 - bug fixed: Fixed a bug which generates a false link fot the addressbook button.

 - changed: Sitetitle now with the title of the document page and the description of the document
            page is now in the metag tag.
 - changed: Updated phpMailer to 2.0.
 - changed: Char decoding updated (better support for UTF-8).
 - changed: Dutch language updated.

 - added: Another view for the mediamanager. We can now disply the content of the media manager
          with a icon and new a list view.
 - added: Some lines of PHP.ini settings code to the .htaccess (_.htaccess) file to set the
          PHP fileextension .php to PHP5 (it's currently a problem on websites hosted on the
          "1&1 Webhosting AG" in Germany).
 - added: Iconv support for the text decode methods for the whole system (better support for
          unicode charsets).
 - added: RSS Feed for the comments.



 
 Version 1.6.0 Development / Stable
-----------------------------------------------------------------
 - bug #0000113: Fixed problem showing text at detail-view in gallery using K2-theme.
 - bug #0000171: Fixed the color chooser.