@@ -8,9 +8,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 3800</build>
+	<build>Build 3807</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>27.12.2007 - 22:50</release_date>
+	<release_date>28.12.2007 - 15:53</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
